feat: added transition for post cards

--- a/index.html
+++ b/index.html
@@ -375,7 +375,9 @@
 
         <div class="swiper-slide" data-slide-theme="light">
           <!-- Imóvel Hub section -->
-          <section class="container mx-auto h-screen grid content-center border-l border-r border-l-blue-25 border-r-blue-25">
+          <section
+            class="container mx-auto h-screen grid content-center border-l border-r border-l-blue-25 border-r-blue-25"
+          >
             <div>
               <!-- Section title -->
               <div class="flex justify-between items-center pb-16">
@@ -390,7 +392,9 @@
             <div class="swiper horizontal-slider container overflow-visible">
               <div class="swiper-wrapper container mx-auto">
                 <!-- Slide -->
-                <div class="swiper-slide w-[570px]">
+                <div
+                  class="swiper-slide w-[570px] rounded-5 hover:-translate-y-4 transition-all duration-300 group overflow-hidden"
+                >
                   <!-- Post card -->
                   <a href="#" class="relative">
                     <div class="relative aspect-[570/420] w-[570px]">
@@ -403,7 +407,7 @@
 
                     <!-- Post card content -->
                     <div
-                      class="p-4 bg-gray-a200 absolute left-2/4 -translate-x-2/4 bottom-6 backdrop-blur-sm text-white rounded-3.5 max-w-[522px] w-full"
+                      class="p-4 bg-gray-a200 absolute left-2/4 -translate-x-2/4 bottom-6 backdrop-blur-sm text-white rounded-3.5 max-w-[522px] w-full group-hover:-translate-y-20 transition-transform duration-300"
                     >
                       <div class="flex justify-between text-xs mb-4">
                         <span class="font-bold">Bruce Willis</span>
@@ -422,11 +426,19 @@
                         </p>
                       </div>
                     </div>
+
+                    <a
+                      href="#"
+                      class="btn btn-gradient border-gray-a200 absolute group-hover:-translate-y-[72px] left-6 transition-transform"
+                      >Read More</a
+                    >
                   </a>
                 </div>
 
                 <!-- Slide -->
-                <div class="swiper-slide w-[570px]">
+                <div
+                  class="swiper-slide w-[570px] rounded-5 hover:-translate-y-4 transition-all duration-300 group overflow-hidden"
+                >
                   <!-- Post card -->
                   <a href="#" class="relative">
                     <div class="relative aspect-[570/420] w-[570px]">
@@ -439,7 +451,7 @@
 
                     <!-- Post card content -->
                     <div
-                      class="p-4 bg-gray-a200 absolute left-2/4 -translate-x-2/4 bottom-6 backdrop-blur-sm text-white rounded-3.5 max-w-[522px] w-full"
+                      class="p-4 bg-gray-a200 absolute left-2/4 -translate-x-2/4 bottom-6 backdrop-blur-sm text-white rounded-3.5 max-w-[522px] w-full group-hover:-translate-y-20 transition-transform duration-300"
                     >
                       <div class="flex justify-between text-xs mb-4">
                         <span class="font-bold">Bruce Willis</span>
@@ -458,11 +470,19 @@
                         </p>
                       </div>
                     </div>
+
+                    <a
+                      href="#"
+                      class="btn btn-gradient border-gray-a200 absolute group-hover:-translate-y-[72px] left-6 transition-transform"
+                      >Read More</a
+                    >
                   </a>
                 </div>
 
                 <!-- Slide -->
-                <div class="swiper-slide w-[570px]">
+                <div
+                  class="swiper-slide w-[570px] rounded-5 hover:-translate-y-4 transition-all duration-300 group overflow-hidden"
+                >
                   <!-- Post card -->
                   <a href="#" class="relative">
                     <div class="relative aspect-[570/420] w-[570px]">
@@ -475,7 +495,7 @@
 
                     <!-- Post card content -->
                     <div
-                      class="p-4 bg-gray-a200 absolute left-2/4 -translate-x-2/4 bottom-6 backdrop-blur-sm text-white rounded-3.5 max-w-[522px] w-full"
+                      class="p-4 bg-gray-a200 absolute left-2/4 -translate-x-2/4 bottom-6 backdrop-blur-sm text-white rounded-3.5 max-w-[522px] w-full group-hover:-translate-y-20 transition-transform duration-300"
                     >
                       <div class="flex justify-between text-xs mb-4">
                         <span class="font-bold">Bruce Willis</span>
@@ -494,6 +514,12 @@
                         </p>
                       </div>
                     </div>
+
+                    <a
+                      href="#"
+                      class="btn btn-gradient border-gray-a200 absolute group-hover:-translate-y-[72px] left-6 transition-transform"
+                      >Read More</a
+                    >
                   </a>
                 </div>
               </div>
