feat: added color transition for header navigation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <!-- Navigation -->
       <nav
-        class="w-[calc(100%-32px)] lg:container fixed z-20 top-8 left-2/4 -translate-x-2/4 grid grid-cols-2 lg:grid-cols-[116px_1fr_max-content] items-center bg-blue-25 rounded-25 p-2 pl-6 lg:mx-0 border-blue-a300 border"
+        class="w-[calc(100%-32px)] lg:container fixed z-20 top-8 left-2/4 -translate-x-2/4 grid grid-cols-2 lg:grid-cols-[116px_1fr_max-content] items-center text-nav-text-theme bg-nav-theme rounded-25 p-2 pl-6 lg:mx-0 border-nav-border-theme border backdrop-blur-sm transition-all duration-300"
       >
         <a href="/" class="flex items-end gap-2">
           <svg
