feat: added border under chart

--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@
                   Índice de Imóveis 2024: Preços e Tendências:
                 </h3>
 
-                <div class="aspect-[585/459] w-[585px]">
+                <div
+                  class="relative aspect-[585/459] w-[585px] after:content-[''] after:absolute after:bottom-14 after:w-full after:h-px after:bg-blue-25"
+                >
                   <canvas id="chart"></canvas>
                 </div>
               </div>
