feat: updated scripts folder structure, disabled swiper on mobile

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
       </nav>
     </header>
 
-    <div class="swiper vertical-slider h-full w-full">
-      <main class="swiper-wrapper">
+    <div class="swiper vertical-slider h-full w-full overflow-visible xl:overflow-hidden">
+      <main class="swiper-wrapper block xl:flex h-auto xl:h-full">
         <!-- Chart section -->
         <div class="swiper-slide" data-slide-theme="light">
           <section class="container mx-auto">
@@ -390,7 +390,7 @@
         <div class="swiper-slide" data-slide-theme="light">
           <!-- Imóvel Hub section -->
           <section
-            class="container mx-4 lg:mx-auto h-screen grid content-center border-l border-r border-l-blue-25 border-r-blue-25"
+            class="container mx-4 lg:mx-auto lg:h-screen grid content-center border-l border-r border-l-blue-25 border-r-blue-25"
           >
             <!-- Section title -->
             <div class="flex justify-between items-center md:pb-16">
