feat: updated mobile styles for Como funciona? section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="swiper-slide" data-slide-theme="light">
           <section class="container mx-auto">
             <div
-              class="grid grid-cols-1 xl:grid-cols-[minmax(0,533px)_1fr] xl:h-screen xl:gap-[52px] mx-4 xl:mx-0 pb-6 border-l border-r border-blue-25"
+              class="grid grid-cols-1 xl:grid-cols-[minmax(0,533px)_1fr] xl:h-screen xl:gap-[52px] mx-4 xl:mx-0 lg:pb-6 border-l border-r border-blue-25"
             >
               <div class="pt-32 lg:pt-0 grid content-center">
                 <h2
@@ -227,16 +227,16 @@
           <section class="bg-blue-100">
             <div class="container mx-auto relative text-white">
               <h2
-                class="absolute left-4 lg:left-0 top-40 lg:top-48 z-10 uppercase lg:text-7xl text-[40px] leading-[48px] font-secondary pb-16"
+                class="absolute left-4 lg:left-0 top-40 lg:top-48 z-10 uppercase lg:text-7xl text-[40px] leading-[48px] font-secondary"
               >
                 Como funciona?
               </h2>
 
               <ol
-                class="grid grid-cols-[repeat(4,272px)] lg:grid-cols-4 overflow-x-auto overflow-y-hidden content-center items-baseline h-screen ml-2 lg:ml-0 border-l-gray-a200 border-l border-r-gray-a200 border-r"
+                class="grid grid-cols-[repeat(4,272px)] lg:grid-cols-4 overflow-x-auto overflow-y-hidden content-center items-baseline h-min-56.25 xl:h-screen ml-4 lg:ml-0 border-l-gray-a200 border-l border-r-gray-a200 border-r"
               >
                 <li
-                  class="relative overflow-hidden px-8 h-screen flex flex-col justify-center lg:pb-2 hover:bg-gradient-to-b bg-blue-100 from-blue-100 to-purple-500 group"
+                  class="relative overflow-hidden px-8 h-min-56.25 xl:h-screen flex flex-col justify-center lg:pb-2 hover:bg-gradient-to-b bg-blue-100 from-blue-100 to-purple-500 group"
                 >
                   <span class="text-7xl flex items-center gap-2 mb-8 font-secondary"
                     >01
@@ -274,7 +274,7 @@
                 </li>
 
                 <li
-                  class="relative overflow-hidden px-8 h-screen flex flex-col justify-center pb-14 lg:pb-12 border-l-gray-a200 border-l hover:bg-gradient-to-b from-blue-100 to-purple-500 group"
+                  class="relative overflow-hidden px-8 h-min-56.25 xl:h-screen flex flex-col justify-center pb-14 lg:pb-12 border-l-gray-a200 border-l hover:bg-gradient-to-b from-blue-100 to-purple-500 group"
                 >
                   <span class="text-7xl flex items-center gap-2 mb-8 font-secondary"
                     >02
@@ -310,7 +310,7 @@
                 </li>
 
                 <li
-                  class="relative overflow-hidden px-8 h-screen flex flex-col justify-center pb-14 lg:pb-12 border-l-gray-a200 border-l hover:bg-gradient-to-b from-blue-100 to-purple-500 group"
+                  class="relative overflow-hidden px-8 h-min-56.25 xl:h-screen flex flex-col justify-center pb-14 lg:pb-12 border-l-gray-a200 border-l hover:bg-gradient-to-b from-blue-100 to-purple-500 group"
                 >
                   <span class="text-7xl flex items-center gap-2 mb-8 font-secondary"
                     >03
@@ -348,7 +348,7 @@
                 </li>
 
                 <li
-                  class="relative overflow-hidden px-8 h-screen flex flex-col justify-center pb-4 border-l-gray-a200 border-l hover:bg-gradient-to-b from-blue-100 to-purple-500 group"
+                  class="relative overflow-hidden px-8 h-min-56.25 xl:h-screen flex flex-col justify-center pb-4 border-l-gray-a200 border-l hover:bg-gradient-to-b from-blue-100 to-purple-500 group"
                 >
                   <span class="text-7xl flex items-center gap-2 mb-8 font-secondary"
                     >04
@@ -393,7 +393,7 @@
             class="container mx-4 lg:mx-auto lg:h-screen grid content-center border-l border-r border-l-blue-25 border-r-blue-25"
           >
             <!-- Section title -->
-            <div class="flex justify-between items-center md:pb-16">
+            <div class="flex justify-between items-center py-16">
               <h2
                 class="md:text-7xl text-[40px] leading-[48px] mb-8 md:mb-0 uppercase font-secondary"
               >
@@ -547,7 +547,7 @@
               <div class="swiper-scrollbar bg-blue-25"></div>
             </div>
 
-            <a href="#" class="btn btn-gradient w-[calc(100%-32px)] mx-auto md:hidden"
+            <a href="#" class="btn btn-gradient w-[calc(100%-32px)] mx-auto mb-15 md:mb-0 md:hidden"
               >Descobrir Mais</a
             >
 
@@ -564,7 +564,7 @@
             >
               <!-- Subscribe section -->
               <div
-                class="justify-self-center self-center lg:h-screen grid content-center lg:border-r lg:border-r-gray-a200 lg:px-[42px] pt-32 lg:pt-0"
+                class="justify-self-center self-center lg:h-screen grid content-center lg:border-r lg:border-r-gray-a200 lg:px-[42px] pt-16 lg:pt-0"
               >
                 <h2 class="uppercase text-7xl mb-2 lg:mb-4 font-secondary text-center">
                   Newsletter
